# project_generator

./: README.md  generate_project.sh
data/: CMakeLists.txt
data/ext/easyloggingcpp/: CMakeLists.txt
data/ext/gtest/: CMakeLists.txt
data/src/: CMakeLists.txt
data/test/: CMakeLists.txt
